@@ -883,6 +883,42 @@ will be treated as points.
 It only means that some accuracy and possibly some smoothness
 will be traded for speed in the shadow calculations.
 
+.Options.Pgmap
+
+The "Pgmap" specifies the file to hold the global photons computed
+by the "mkpmap" command, followed by the number of photons to generate
+(required).
+A typical photon count for a global map is on the order of 100-200K.
+By convention, photon map files are given a ".pmp" suffix.
+An optional third parameter specifies the bandwidth to use 
+for the global photons during rendering, and this value should be
+around 50.
+
+.Options.PgmDelete
+
+The "Delete" button next to the "Pgmap" window on the Options
+screen allows you to remove the named global photon map file.
+This is usually done when a change is made to the "mkpmap" options,
+as the file will be regenerated automatically after most scene changes.
+
+.Options.Pcmap
+
+The "Pcmap" specifies the file to hold the caustic photons computed
+by the "mkpmap" command, followed by the number of photons to generate
+(required).
+A typical photon count for a global map is on the order of 1000K.
+By convention, photon map files are given a ".pmp" suffix.
+An optional third parameter specifies the bandwidth to use 
+for the global photons during rendering, and this value should be
+around 50.
+
+.Options.PcmDelete
+
+The "Delete" button next to the "Pcmap" window on the Options
+screen allows you to remove the named caustic photon map file.
+This is usually done when a change is made to the "mkpmap" options,
+as the file will be regenerated automatically after most scene changes.
+
 .Options.Ambfile
 
 The "Ambfile" is the file used to store Radiance ambient values for
@@ -967,12 +1003,19 @@ indicate this by not specifying any illum or scene files.
 .Options.Mkillum
 
 The "mkillum opts" window may be used to specify options to the
-mkillum(1) command, whose options are actually passed to rtrace(1).
+mkillum(1) command.
 These options apply only if there are one or more "Illum" files
 named on the Scene screen.
 
 It is very important to set mkillum options sensibly,
 since rad does not have the intelligence to do it for you.
+
+.Options.Mkpmap
+
+The "mkpmap opts" window may be used to specify options
+to the mkpmap(1) command.
+There are no default values, and rad does not set these
+options intelligently.
 
 .Options.Render
 
